@@ -168,6 +168,7 @@ XS/RadioButton.xs
 XS/SashWindow.xs
 XS/ScrollBar.xs
 XS/ScrolledWindow.xs
+XS/SearchCtrl.xsp
 XS/SingleChoiceDialog.xs
 XS/Sizer.xs
 XS/Slider.xs
