@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     01/03/2003
 ## RCS-ID:      $Id$
-## Copyright:   (c) 2003-2006 Mattia Barbon
+## Copyright:   (c) 2003-2007 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -85,6 +85,7 @@
 %typemap{wxToolBar*}{simple};
 %typemap{wxTextCtrl*}{simple};
 %typemap{wxControl*}{simple};
+%typemap{wxMenu*}{simple};
 
 %typemap{wxColour}{reference};
 %typemap{const wxColour&}{reference};
